--- a/test.ipynb
+++ b/test.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymongo import MongoClient"
+    "from pymongo import MongoClient\n",
+    "from pymongo import MongoClient, ASCENDING"
    ]
   },
   {
@@ -37,7 +38,7 @@
     }
    ],
    "source": [
-    "collection.update_many({},{'$rename': {'exp': 'ext'}})"
+    "# collection.update_many({},{'$rename': {'exp': 'ext'}})"
    ]
   },
   {
@@ -57,19 +58,67 @@
     }
    ],
    "source": [
-    "collection.update_many(\n",
-    "    {},\n",
-    "    [\n",
-    "        {\"$set\": {\n",
-    "            \"file_name\": {\n",
-    "                \"$arrayElemAt\": [\n",
-    "                    {\"$split\": [\"$file_name\", \".\"]}, \n",
-    "                    0\n",
-    "                ]\n",
-    "            }\n",
-    "        }}\n",
-    "    ]\n",
-    ")"
+    "# collection.update_many(\n",
+    "#     {},\n",
+    "#     [\n",
+    "#         {\"$set\": {\n",
+    "#             \"file_name\": {\n",
+    "#                 \"$arrayElemAt\": [\n",
+    "#                     {\"$split\": [\"$file_name\", \".\"]}, \n",
+    "#                     0\n",
+    "#                 ]\n",
+    "#             }\n",
+    "#         }}\n",
+    "#     ]\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = collection.find({}).sort(\"_id\", ASCENDING)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('649433c7109125e438a14ec9'),\n",
+       " 'hash': '8cdcf1e34401861a9d16eba2067fc7ffa65917b13e4e698bf27e2b08abbd8ed2',\n",
+       " 'file_name': '2_orang',\n",
+       " 'tag': ['storage',\n",
+       "  'makeupproduct',\n",
+       "  'online',\n",
+       "  'warehouse',\n",
+       "  'shelf',\n",
+       "  'product',\n",
+       "  'makeupproducts',\n",
+       "  'beautyproduct',\n",
+       "  'feminineproduct',\n",
+       "  'productphoto',\n",
+       "  'thehomedepot'],\n",
+       " 'HDD_name': 'sda',\n",
+       " 'start_path': 'media/mlfavorfit',\n",
+       " 'middle_path': 'product_img',\n",
+       " 'source': 'unsplash',\n",
+       " 'label': None,\n",
+       " 'ext': 'jpeg'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.next()"
    ]
   },
   {
