Error 수정 및 기능 추가
로그 상세화, skipindex 기능 추가, label옵션 추가

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,41 +84,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('649433c7109125e438a14ec9'),\n",
-       " 'hash': '8cdcf1e34401861a9d16eba2067fc7ffa65917b13e4e698bf27e2b08abbd8ed2',\n",
-       " 'file_name': '2_orang',\n",
-       " 'tag': ['storage',\n",
-       "  'makeupproduct',\n",
-       "  'online',\n",
-       "  'warehouse',\n",
-       "  'shelf',\n",
-       "  'product',\n",
-       "  'makeupproducts',\n",
-       "  'beautyproduct',\n",
-       "  'feminineproduct',\n",
-       "  'productphoto',\n",
-       "  'thehomedepot'],\n",
-       " 'HDD_name': 'sda',\n",
-       " 'start_path': 'media/mlfavorfit',\n",
-       " 'middle_path': 'product_img',\n",
-       " 'source': 'unsplash',\n",
-       " 'label': None,\n",
-       " 'ext': 'jpeg'}"
+       "409494"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursor.next()"
+    "for _ in range(1): cursor.next()\n",
+    "len([cur for cur in cursor])"
    ]
   },
   {
